Bugfix: Removed "nowrap" from preview news item

--- a/themes/Lokaal-Hellendoorn/sass/app/pages/_news-overvieuw.scss
+++ b/themes/Lokaal-Hellendoorn/sass/app/pages/_news-overvieuw.scss
@@ -118,13 +118,6 @@
 
 	.news-item-previeuw {
 		margin-bottom: 50px;
-
-		p {
-			overflow: hidden;
-			white-space: nowrap;
-			text-overflow: ellipsis;
-		}
-
 	}
 
 	.news-item-image {
